--- a/.classpath
+++ b/.classpath
@@ -13,7 +13,6 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
-	<classpathentry kind="lib" path="C:/Program Files/Weka-3-8/mysql-connector-java-5.1.48-bin.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/mysql-connector-java-8.0.11.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Acer/Documents/workspace-sts-3.9.10.RELEASE/teste/WebContent/WEB-INF/lib/weka.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
